# cp2k-benchmarking

./: README.md  pushing_to_github.sh  pyproject.toml
src/cp2k_benchmarking/: cli.py  report.py  submit.py
src/cp2k_benchmarking/qmmm/: report.py  setup.py
src/cp2k_qmmm_benchmarking/: cli.py  setup.py
